--- a/semantic_region_handler/CMakeLists.txt
+++ b/semantic_region_handler/CMakeLists.txt
@@ -3,7 +3,7 @@ project(semantic_region_handler)
 
 find_package(catkin REQUIRED COMPONENTS actionlib rospy geometry_msgs world_msgs worldlib message_generation)
 
-# catkin_python_setup()
+catkin_python_setup()
 
 #######################################
 ## Declare ROS messages and services ##
@@ -13,7 +13,7 @@ find_package(catkin REQUIRED COMPONENTS actionlib rospy geometry_msgs world_msgs
 add_message_files(
   DIRECTORY msg
   FILES
-  Radius.msg
+  Region.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -35,47 +35,13 @@ generate_messages(
 ## catkin specific configuration ##
 ###################################
 catkin_package(
-  CATKIN_DEPENDS message_runtime actionlib rospy world_msgs worldlib
+  CATKIN_DEPENDS message_runtime 
 )
 
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
-# include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
-
-## Declare a cpp library
-# add_library(semantic_region_handler
-#   src/${PROJECT_NAME}/semantic_region_handler.cpp
-# )
-
-## Declare a cpp executable
-# add_executable(semantic_region_handler_node src/semantic_region_handler_node.cpp)
-
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
-# add_dependencies(semantic_region_handler_node semantic_region_handler_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(semantic_region_handler_node
-#   ${catkin_LIBRARIES}
-# )
-
-#############
-## Install ##
-#############
-
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/groovy/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS
+  scripts/circle_semantic_handler.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS semantic_region_handler semantic_region_handler_node
