--- a/semantic_region_handler/package.xml
+++ b/semantic_region_handler/package.xml
@@ -23,4 +23,5 @@
   <run_depend>world_msgs</run_depend>
   <run_depend>worldlib</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>rospy_message_converter</run_depend>
 </package>
