--- a/semantic_region_handler/package.xml
+++ b/semantic_region_handler/package.xml
@@ -16,6 +16,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>world_msgs</build_depend>
   <build_depend>worldlib</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>rospy</run_depend>
@@ -25,4 +26,5 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>rospy_message_converter</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
 </package>
